PWARE-125 Restrict membership across consultee groups to a single team (#112)
* PWARE-125 Restrict membership across consultee groups to a single team

* Add unit tests for canAddUserToTeam in TeamManagementService

* test: remove redundant error reset in AddMemberFormValidatorTest